--- a/style-inicio.css
+++ b/style-inicio.css
@@ -63,6 +63,7 @@ main h3{
 h4 {
     text-align: center;
     padding-top:5%;
+    
     padding-bottom:5%;
     margin-bottom:3% !important;
     
@@ -77,10 +78,10 @@ h4 a {
     
     padding:10%;
     border-radius: 53px;
-    background: #e0e0e0;
+    background-color: #e0e0e0;
     box-shadow:  22px 22px 44px #bebebe,
              -22px -22px 44px #ffffff;
-    transition: box-shadow 0.6s, background 0.6s, color 0.6s;
+    transition: box-shadow 0.6s, background-color 0.6s, color 0.6s;
 }
 
 h4 a:hover{
@@ -113,3 +114,10 @@ section h3 {
 }
 
 
+@media only screen and (min-width: 0px) and (max-width: 768px) {
+    h4 {
+        padding-top: 12% !important;
+        padding-bottom: 15% !important;
+    }
+    
+}
