--- a/cv-style.css
+++ b/cv-style.css
@@ -17,7 +17,7 @@ main h3 {
     height:2%;
     text-align: center;
     display:block;
-    border:2px solid rgb(34, 34, 34);
+    border:2px solid rgb(59, 59, 59);
     border-radius: 20px;
     padding:1%;
     box-shadow:inset 12px 20px 24px rgb(27, 27, 27);
@@ -41,9 +41,7 @@ aside li {
     list-style-type:none;
 float:left;
 }
-h5 {
-    width:5%;
-}
+
 .codigo {
     margin-top:1%;
     padding-right:1%;
@@ -51,4 +49,9 @@ h5 {
 
 .herramientas {
     padding-left:1%;
+}
+
+hr {
+    border-top:3px solid white !important;  
+
 }
