--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ header {
     position:fixed;
     top:0;
     background-color: rgb(34, 34, 34);
+    box-shadow: 0px 0px 20px 20px #101010;
 
 }
 
