--- a/style.css
+++ b/style.css
@@ -29,15 +29,7 @@ nav li {
     float: left;
     padding-left:10%;
     padding-right:10%;
-    
-   
-    margin-top:4%;
-  
-   
-    
-
-    
-    
+    margin-top:4%; 
 }
 
 li a {
@@ -48,7 +40,7 @@ li a {
   
 }
 
-nav li a:hover {
+li a:hover {
     background-color:rgb(99, 99, 100);
     box-shadow: 0px 0px 20px 20px rgb(99, 99, 100);
     border:none;
@@ -61,17 +53,14 @@ nav li a:hover {
 
 footer{
     background-color:rgb(34, 34, 34) ;
+   padding-bottom:3%;
     padding-top:3%;
 }
-
-footer li a:hover {
-   
-    color: black;
-    
+footer ul{
+    margin:0;
+    padding:0;
 
 }
-
-
 
 h1 {
     margin-top:2.5% !important;
@@ -88,5 +77,9 @@ main {
     margin-top:7%;
     padding:2% !important;
     box-shadow: inset 0px 20px 24px #101010;
+}
+
+.fa-brands {
+    color:white;
 }
 
