--- a/cv-style.css
+++ b/cv-style.css
@@ -70,3 +70,11 @@ aside h4{
     font-size: 1.7em;
    
 }
+
+@media only screen and (min-width: 0px) and (max-width: 1061px) {
+    #formacion {
+        padding-top:5% !important;
+        margin-top:5% !important;
+    }
+    
+}
