--- a/style-inicio.css
+++ b/style-inicio.css
@@ -108,8 +108,8 @@ section h3 {
     color:rgb(117, 117, 117);
     font-size:2em;
     text-align: center;
-    visibility: hidden;
-    transition: visibility 0.3s;
+    padding-top:3% !important;
+
     
 }
 
@@ -119,5 +119,20 @@ section h3 {
         padding-top: 12% !important;
         padding-bottom: 15% !important;
     }
+   
     
+}
+@media only screen and (min-width: 0px) and (max-width: 768px) {
+    h4 {
+        padding-top: 12% !important;
+        padding-bottom: 15% !important;
+    }
+   
+    
+} 
+
+@media only screen and (min-width:0px) and (max-width:991px){
+    #diaSemanaSaludar  {
+        padding-top:16% !important;
+    }
 }
