--- a/Proyectos JavaScript/style_counter.css
+++ b/Proyectos JavaScript/style_counter.css
@@ -1,3 +1,14 @@
+[data-theme='light']{
+    --primary:black;
+    --secondary:rgb(155, 146, 146);
+    --background:white;
+}
+[data-theme='dark']{
+    --primary:white;
+    --secondary:rgb(155, 146, 146);
+    --background:black;
+
+}
 *{
     box-sizing: border-box;
     margin:0;
@@ -5,6 +16,7 @@
 
 }
 body{
+    background-color: var(--background);
     
     height:100%;
     width:100%;
@@ -17,12 +29,14 @@ header {
     text-align: center;
     font-size: 2rem;
     padding-top:8%;
+    color:var(--secondary);
 
 }
 main {
     text-align: center;
     margin-top:6%;
     font-size:2rem;
+    color:var(--secondary);
 
 }
 h2, h3 {
@@ -38,17 +52,20 @@ section{
 
 button{
     font-family: 'Montserrat', sans-serif;
+    color:var(--secondary);
     font-size: 1rem;
     padding:1%;
     border-radius: 20px;
+    background-color: var(--background);
     transition: background-color, color, 0.4s ;
 }
 
 button:hover {
-    background-color: black;
-    color:white;
+    background-color: var(--secondary);
+    color:var(--background);
 }
 small {
+    color:var(--primary);
     font-family: 'Montserrat', sans-serif;
     font-size:1rem;
 }
@@ -58,6 +75,15 @@ small {
     padding:0.5%;
    
     text-align: center;
+    background-color: var(--secondary);
+    color:var(--background);
+    transition: background-color, color, 0.4s ;
+
+}
+
+#night:hover{
+    background-color: var(--primary);
+    color:var(--secondary);
 
 }
 
