--- a/Proyectos JavaScript/style_counter.css
+++ b/Proyectos JavaScript/style_counter.css
@@ -52,7 +52,8 @@ section{
 
 button{
     font-family: 'Montserrat', sans-serif;
-    color:var(--secondary);
+    color:var(--primary);
+    border: 2px solid var(--secondary);
     font-size: 1rem;
     padding:1%;
     border-radius: 20px;
