--- a/style-inicio.css
+++ b/style-inicio.css
@@ -60,23 +60,18 @@ main h3{
 
 }
 
-h4 {
+
+details{
+    text-decoration:none;
+    color:rgb(34, 34, 34);
     text-align: center;
     padding-top:5%;
     
     padding-bottom:5%;
-    margin-bottom:3% !important;
-    
-    
-}
+    margin-bottom:5% !important;
+   margin-right:10%;
 
-
-
-h4 a {
-    text-decoration:none;
-    color:rgb(34, 34, 34);
-    
-    padding:10%;
+   
     border-radius: 53px;
     background-color: #e0e0e0;
     box-shadow:  22px 22px 44px #bebebe,
@@ -84,11 +79,13 @@ h4 a {
     transition: box-shadow 0.6s, background-color 0.6s, color 0.6s;
 }
 
-h4 a:hover{
+details:hover{
     color:white;
     border-radius: 53px;
-background: #292929;
-box-shadow:  22px 22px 44px #161616,
+
+    background: #292929;
+
+    box-shadow:  22px 22px 44px #161616,
              -22px -22px 44px #3c3c3c;
 }
 
@@ -135,4 +132,11 @@ section h3 {
     #diaSemanaSaludar  {
         padding-top:16% !important;
     }
+}
+
+@media (min-width: 768px){
+.col-md-6 {
+    flex: 0 0 auto !important;
+    width: 40% !important;
+}
 }
